# vid-editor

docs/: implementation-guide.md  prd.md  roadmap.md
video_ai/: force-libclang-build.sh
video_ai/.cargo/: config.toml
video_ai/cli/: Cargo.toml
video_ai/cli/src/: main.rs
video_ai/core/: Cargo.toml
video_ai/core/src/: lib.rs
video_ai/core/src/input/: mod.rs
video_ai/core/src/output/: mod.rs
